// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders 1`] = `
<Modal
  contentLabel="project_branch_pull_request.branch.delete"
  onRequestClose={[MockFunction]}
>
  <header
    className="modal-head"
  >
    <h2>
      project_branch_pull_request.branch.delete
    </h2>
  </header>
  <form
    onSubmit={[Function]}
  >
    <div
      className="modal-body"
    >
      project_branch_pull_request.branch.delete.are_you_sure.feature/foo
    </div>
    <footer
      className="modal-foot"
    >
      <SubmitButton
        className="button-red"
        disabled={false}
      >
        delete
      </SubmitButton>
      <ResetButtonLink
        onClick={[MockFunction]}
      >
        cancel
      </ResetButtonLink>
    </footer>
  </form>
</Modal>
`;

exports[`renders 2`] = `
<Modal
  contentLabel="project_branch_pull_request.branch.delete"
  onRequestClose={[MockFunction]}
>
  <header
    className="modal-head"
  >
    <h2>
      project_branch_pull_request.branch.delete
    </h2>
  </header>
  <form
    onSubmit={[Function]}
  >
    <div
      className="modal-body"
    >
      project_branch_pull_request.branch.delete.are_you_sure.feature/foo
    </div>
    <footer
      className="modal-foot"
    >
      <i
        className="spinner spacer-right"
      />
      <SubmitButton
        className="button-red"
        disabled={true}
      >
        delete
      </SubmitButton>
      <ResetButtonLink
        onClick={[MockFunction]}
      >
        cancel
      </ResetButtonLink>
    </footer>
  </form>
</Modal>
`;
